--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,11 +7,34 @@
     android:layout_height="match_parent"
 
  >
-
+    <LinearLayout
+        android:layout_weight=".3"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_weight=".3"
+        android:layout_width="300dp"
+        android:layout_height="500dp"
         android:scrollbars="vertical" />
+    </LinearLayout>
+   <LinearLayout
+       android:layout_weight=".7"
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent">
 
-</RelativeLayout>
+
+       <ImageView
+           android:id="@+id/image"
+           android:src="@drawable/ic_launcher"
+           android:layout_gravity="center"
+           android:textSize="16dp"
+           android:textStyle="bold"
+           android:layout_alignParentTop="true"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
+
+
+   </LinearLayout>
+
+</LinearLayout>
